# aumos-vendor-intelligence

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml
src/aumos_vendor_intelligence/: __init__.py  main.py  settings.py
src/aumos_vendor_intelligence/adapters/: __init__.py  arbitrage_detector.py  benchmarking_runner.py  contract_analyzer.py  dashboard_aggregator.py  fallback_router.py  iso42001_repository.py  kafka.py  monitoring_adapters.py  negotiation_playbook.py  procurement_advisor.py  questionnaire_repository.py  repositories.py  sla_monitor.py  vendor_data_enricher.py
src/aumos_vendor_intelligence/api/: __init__.py  router.py  schemas.py
src/aumos_vendor_intelligence/core/: __init__.py  interfaces.py  models.py  services.py
tests/: __init__.py  test_services.py
